# paperless_uploader

./: .drone.yml  Cargo.toml  config.json
src/: document_processor.rs  error_logging.rs  main.rs
