[package]
name = "paperless_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
config = { version = "0.13.2", features = ["json"] }
flexi_logger = { version = "0.24.1", features = ["compress"] }
log = "0.4.17"
notify = { version = "5.0.0", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["multipart", "blocking"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
